[names] are references to people in the AUTHORS file.

Changed in ATK 5.5.1
--------------------
+ Added atkMessageQueue for user notification messages, which can be shown
  via the atkmessages plugin. [Patrick]
+ Added atkCalculatorAttribute for adding columns with calculated values. [Ivo]
+ Added atkShuttleRelation. [Ivo]
+ Added 'macoslike' theme. [Marcel]
+ Added setText method to atkLanguage. [Sandy]
+ Added fetchvalues method to atkBoolRelation, it now returns 0 if nothing
  is checked instead of NULL (The atkOrgRec also gives 0). [Sandy]
+ Added atkPluginTestCase class for easier testing of Smarty plugins. [Ivo]
+ Included parent class for the atkmockquery. [Martin]
+ Added type="text/css" attribute to <style> tags. [Guido]
+ Added support for row and col span in the atkTableRenderer. [Sandy]
+ Added NOLOAD constant for use in atkAttribute's loadType() method. [Ivo]
+ Added ability to set a CSS class per row, column or cell. [Guido]
+ Added reloadapp(); function which can be used to reload all the frames in
  your application. [Boy]
+ Added support for user-level language support. [Boy]
+ All relationships based on atkManyToManyRelation now have better localKey
  and remoteKey detection. The use of setRemoteKey and setLocalKey is no
  longer necessary if the foreign keys have the same name with the relation
  with _id appended to it. [Ivo]
+ Added atkManyBoolRelation::setCols() method to set the number of columns
  with checkboxes. [Ivo]
+ Added new lesson (9) to demo application to demonstrate many-to-many
  relations. [Ivo]
+ Added setToolbarSet() method to atkFckAttribute to change the displayed
  toolbars. [Ivo]
+ Added setAutonumbering() method to atkFileAttribute to turn on autonumbering
  of files when files with the same name as that of a different record are
  uploaded. [Ivo]
+ Added ajax powered smart search functionality for performing arbitraty 
  searches on any node. [Peter]