@@ -1,0 +1,6 @@
+<?php
+
+ // Typo3 look-a-like skin, based on 't3skin' from Typo3.
+ // Author: Ivo Jansch <ivo@achievo.org>
+
+?>
