@@ -11,6 +11,7 @@ Changed in ATK 5.5.1
 + Added atkCalculatorAttribute for adding columns with calculated values. [Ivo]
 + Added atkShuttleRelation. [Ivo]
 + Added 'macoslike' theme. [Marcel]
++ Added 't3skin' theme (Typo3 style). [Ivo]
 + Added setText method to atkLanguage. [Sandy]
 + Added fetchvalues method to atkBoolRelation, it now returns 0 if nothing
   is checked instead of NULL (The atkOrgRec also gives 0). [Sandy]
